Refactoring to make code more reactive and modular. Phase#2